fixed add to cart btn overflow bug

--- a/frontend/src/css/buttons-inputs.css
+++ b/frontend/src/css/buttons-inputs.css
@@ -54,7 +54,7 @@
 
 
 .add-to-cart{
-    width:75%;
+    width:100%;
     border-radius: 5px;
     outline:none;
     background-color: var(--theme-primary);
@@ -73,6 +73,20 @@
 
 .add-to-cart:focus{
     opacity: .5;
+}
+
+@media(min-width:450px){
+    .add-to-cart{
+        /* width:75%; */
+        min-width: 75%;
+    }
+}
+
+@media(min-width:850px){
+    .add-to-cart{
+        width:75%;
+        max-width: 75%;
+    }
 }
 
 .btn-primary{
